# wordle-pp

./: .gitignore  CMakeLists.txt  Dockerfile.build  Dockerfile.test  Makefile  README.md  docker-compose.yml  game.js  hardModeTesting.cpp  heej.c  index.html  styles.css  testing  wordle.cpp  wordle.data  wordle.js  wordle.wasm
.githooks/: pre-commit
.github/workflows/: ci.yml
cpp-logic/data/data-utils/: README.md  wordlist_tool.py
cpp-logic/include/wordle/: engine.hpp
cpp-logic/src/: engine.cpp  wasm_exports.cpp
cpp-logic/tests/: CMakeLists.txt  engine_test.cpp
cpp-solver/include/wordle/: solver.hpp
cpp-solver/src/: solver.cpp
frontend/: game.js  index.html  styles.css
wordLists/: stringPermutationGenerator.cpp  stringpermutations.txt  wordSorter.cpp
